# Obsidian-Jina-Note-Linker-Plugin

./: .gitignore  README.md  ai_config.json  cleanup_hash_boundary_content.py  cleanup_yaml_frontmatter.py  cli.spec  esbuild.config.mjs  jina_obsidian_processor.py  main-origin.js  main-origin.ts  main.js  main.py  main.ts  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  styles.css  tsconfig.json  version-bump.mjs  鹧鸪天-晚日寒鸦一片愁.md
core/utils/: index.ts
models/: constants.ts  interfaces.ts  settings.ts
python_src/: __init__.py  cli.py  config.py  legacy_full.py
python_src/ai_scoring/: provider.py  scorer.py
python_src/db/: schema.py
python_src/embeddings/: generator.py  similarity.py
python_src/hash_utils/: hasher.py
python_src/io/: note_loader.py  output_writer.py
python_src/migration/: migrate_sqlite.py
python_src/orchestrator/: embed_pipeline.py  link_scoring.py  tag_generation.py
python_src/utils/: db.py  logger.py  timer.py
services/: ash-manager.ts  file-processor.ts  hash-manager.ts  link-manager.ts  python-bridge.ts  tag-manager.ts  uuid-manager.ts
temp_debug/: test_db.sqlite
tests/embeddings/: test_generator.py
ui/: settings-tab.ts
ui/modals/: add-ai-tags-modal.ts  add-hash-boundary-modal.ts  calculate-hash-modal.ts  path-suggest-modal.ts  progress-modal.ts  run-plugin-modal.ts  update-hashes-modal.ts
utils/: cache-manager.ts  error-handler.ts  notification-service.ts  path-utils.ts  performance-monitor.ts  python-bridge.ts
